--- a/about.html
+++ b/about.html
@@ -62,6 +62,16 @@
     <link rel="mask-icon" href="/path/to/icon.svg" color="blue">
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4HX7SJW0RE"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-4HX7SJW0RE');
+</script>
+
 <body class="portfolio-details-page">
 
     <header id="header" class="header d-flex align-items-center sticky-top">
@@ -155,11 +165,11 @@
                         <p><strong>Email:</strong> <span>kagp24@mail.ru</span></p>
                     </div>
                     <!--<div class="social-links d-flex mt-4">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>-->
+                        <a href=""><i class="bi bi-twitter-x"></i></a>
+                        <a href=""><i class="bi bi-facebook"></i></a>
+                        <a href=""><i class="bi bi-instagram"></i></a>
+                        <a href=""><i class="bi bi-linkedin"></i></a>
+                    </div>-->
                 </div>
 
                 <div class="col-lg-4 col-md-4 footer-links">
