--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
     </style>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4HX7SJW0RE"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-4HX7SJW0RE');
+</script>
+
 <body class="index-page">
 
     <header id="header" class="header d-flex align-items-center sticky-top">
