--- a/service/cadastre.html
+++ b/service/cadastre.html
@@ -62,6 +62,16 @@
     <link rel="mask-icon" href="/path/to/icon.svg" color="blue">
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4HX7SJW0RE"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-4HX7SJW0RE');
+</script>
+
 <body class="portfolio-details-page">
 
     <header id="header" class="header d-flex align-items-center sticky-top">
