--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                 <div class="carousel-item active">
                     <img src="/assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
                     <div class="carousel-container">
-                        <h2>ИНЖЕНЕРНЫЕ ИЗЫСКАНИЙ<br></h2>
+                        <h2>ИНЖЕНЕРНЫЕ ИЗЫСКАНИЯ<br></h2>
                         <p>"Красноярское АГП" Выполняет весь комплекс работ, включающий проведение полевых работ, камеральную обработку материалов и лабораторных исследований не только на территории Красноярского края, но и далеко за его пределами.</p>
-                        <a href="#featured-services" class="btn-get-started">Узнать больше</a>
+                        <a href="/service/geology.html" class="btn-get-started">Узнать больше</a>
                     </div>
                 </div><!-- End Carousel Item -->
 
@@ -198,43 +198,6 @@
                 </div>
             </div>
         </section><!-- /About Section -->
-        <!-- Stats Section -->
-        <section id="stats" class="stats section dark-background">
-
-            <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-                <div class="row gy-4">
-
-                    <div class="col-lg-3 col-md-6">
-                        <div class="stats-item text-center w-100 h-100">
-                            <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-                            <p>Clients</p>
-                        </div>
-                    </div><!-- End Stats Item -->
-
-                    <div class="col-lg-3 col-md-6">
-                        <div class="stats-item text-center w-100 h-100">
-                            <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-                            <p>Projects</p>
-                        </div>
-                    </div><!-- End Stats Item -->
-
-                    <div class="col-lg-3 col-md-6">
-                        <div class="stats-item text-center w-100 h-100">
-                            <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-                            <p>Hours Of Support</p>
-                        </div>
-                    </div><!-- End Stats Item -->
-
-                    <div class="col-lg-3 col-md-6">
-                        <div class="stats-item text-center w-100 h-100">
-                            <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
-                            <p>Workers</p>
-                        </div>
-                    </div><!-- End Stats Item -->
-                </div>
-            </div>
-        </section><!-- /Stats Section -->
         <!-- Services Section -->
         <section id="services" class="services section">
 
@@ -275,7 +238,7 @@
                         <div class="service-item d-flex position-relative h-100">
                             <i class="bi bi-bar-chart icon flex-shrink-0"></i>
                             <div>
-                                <h4 class="title"><a href="/service/geodesy.html" class="stretched-link">Комплекс инженерных изысканий для линейных и площадных объектов</a></h4>
+                                <h4 class="title"><a href="/service/geology.html" class="stretched-link">Комплекс инженерных изысканий для линейных и площадных объектов</a></h4>
                                 <p class="description">Инженерно-геологические; Гидрометеорологические; Экологические; Гидрологические изыскания</p>
                             </div>
                         </div>
