--- a/service/geodesy.html
+++ b/service/geodesy.html
@@ -132,6 +132,13 @@
 
             <div class="container" data-aos="fade-up" data-aos-delay="100">
                 <h3>Аэрофотосъемочные работы:</h3>
+                <div class="row">
+                    <div class="col d-flex flex-column flex-md-row justify-content-around align-items-center m-3">
+                        <img src="/assets/img/geodez1.jpg" class="p-1" />
+                        <img src="/assets/img/geodez2.jpg" class="p-1" />
+                        <img src="/assets/img/geodez3.jpg" class="p-1" />
+                    </div>
+                </div>
                 <p>
                     "Красноярским АГП" с помощью БПЛА были отсняты порядка 90% всех районных центров Красноярского края.
                 </p>
