--- a/service/geology.html
+++ b/service/geology.html
@@ -132,6 +132,13 @@
 
             <div class="container" data-aos="fade-up" data-aos-delay="100">
                 <h3>Инженерно-геологические изыскания</h3>
+                <div class="row">
+                    <div class="col d-flex flex-column flex-md-row justify-content-around align-items-center m-3">
+                        <img src="/assets/img/geolog1.jpg" class="p-1" />
+                        <img src="/assets/img/geolog2.jpg" class="p-1" />
+                        <img src="/assets/img/geolog3.jpg" class="p-1" />
+                    </div>
+                </div>
                 <p>
                     Инженерно-геологические изыскания для строительства выполняются на площадках любой сложности, в том числе в районах развития опасных геологических и инженерно-геологических процессов, таких как:
                     <ul>
