--- a/service/laboratory.html
+++ b/service/laboratory.html
@@ -132,17 +132,23 @@
 
             <div class="container" data-aos="fade-up" data-aos-delay="100">
                 <p>Исследование различных видов грунтов; Коэффициента выветрелости и истираемости; Исследование химического состава природных вод и водной вытяжки и другое.</p>
+                <div class="row">
+                    <div class="col d-flex flex-column flex-md-row justify-content-around align-items-center m-3">
+                        <img src="/assets/img/lab1.jpg" class="p-1" />
+                        <img src="/assets/img/lab2.jpg" class="p-1" />
+                    </div>
+                </div>
             </div>
             <div>
                 <ul>
-                    <li>исследование дисперсных грунтов, с определением прочностных и деформационныххарактеристик (компрессионные, сдвиговые испытания и испытания на приборетрехосного сжатия);</li>
-                    <li>исследование скальных грунтов с определением предела прочности на одноосное сжатие и одноосное растяжение;</li>
-                    <li>исследование мерзлых грунтов с испытаниями методом шарикового штампа, сдвигапоповерхности смерзания, прочность и деформируемость ММГ методом одноосного сжатия;</li>
-                    <li>исследование крупнообломочных грунтов, с определением физических свойств,</li>
-                    <li>коэффициента выветрелости и истираемости;</li>
-                    <li>исследование физических свойств торфа;</li>
-                    <li>исследование строительных материалов, таких как щебень, песок, ПГС и др.;</li>
-                    <li>исследование химического состава природных вод и водной вытяжки.</li>
+                    <li>исследование дисперсных грунтов, с определением прочностных и деформационныххарактеристик (компрессионные, сдвиговые испытания и испытания на приборетрехосного сжатия);</li>
+                    <li>исследование скальных грунтов с определением предела прочности на одноосное сжатие и одноосное растяжение;</li>
+                    <li>исследование мерзлых грунтов с испытаниями методом шарикового штампа, сдвигапоповерхности смерзания, прочность и деформируемость ММГ методом одноосного сжатия;</li>
+                    <li>исследование крупнообломочных грунтов, с определением физических свойств,</li>
+                    <li>коэффициента выветрелости и истираемости;</li>
+                    <li>исследование физических свойств торфа;</li>
+                    <li>исследование строительных материалов, таких как щебень, песок, ПГС и др.;</li>
+                    <li>исследование химического состава природных вод и водной вытяжки.</li>
                 </ul>
             </div>
         </section>
