--- a/service/maps.html
+++ b/service/maps.html
@@ -112,8 +112,15 @@
             <div class="heading">
                 <div class="container">
                     <div class="row d-flex justify-content-center text-center">
-                        <div class="col-lg-8">
+                        <div class="col">
                             <h1>Картографические работы</h1>
+                            <div class="row">
+                                <div class="col d-flex flex-column flex-md-row justify-content-around align-items-center m-3">
+                                    <img src="/assets/img/map1.jpg" class="p-1" />
+                                    <img src="/assets/img/map2.jpg" class="p-1" />
+                                    <img src="/assets/img/map3.jpg" class="p-1" />
+                                </div>
+                            </div>
                             <p class="mb-0">Создание и обновление государственных топографических карт и планов; Создание и обновление цифровых и электронных карт; Ведение банка данных цифровой информации; Создание цифровых топографических карт открытого пользования и другие виды работ</p>
                         </div>
                     </div>
@@ -136,12 +143,12 @@
                 <p>
                     Камеральный цех предприятия выполняет работы:
                     <ul>
-                        <li>по созданию и обновлению государственных топографических карт и планов;</li>
-                        <li>создание и обновление цифровых и электронных карт, ведение банка данных цифровой информации;</li>
-                        <li>создание цифровых топографических карт открытого пользования;</li>
-                        <li>обработка данных для создания карт из различных систем;</li>
-                        <li>оформление и подготовка карт к печати;</li>
-                        <li>перевод планов и схем с бумажных носителей в электронный вид;</li>
+                        <li>по созданию и обновлению государственных топографических карт и планов;</li>
+                        <li>создание и обновление цифровых и электронных карт, ведение банка данных цифровой информации;</li>
+                        <li>создание цифровых топографических карт открытого пользования;</li>
+                        <li>обработка данных для создания карт из различных систем;</li>
+                        <li>оформление и подготовка карт к печати;</li>
+                        <li>перевод планов и схем с бумажных носителей в электронный вид;</li>
                         <li>Создание и оформление навигационных карт с разной детализацией.</li>
                     </ul>
                 </p>
